fixes compilation problem: ported from java 11 to java 8